# SE-Agents

./: .gitignore  LLMS.md  README.md  agent.py  main.py  pyproject.toml  schemas.py  split_string_test.py  system_prompt.py  tools.py
prompts/: objective.py  rules.py  tool_calling.py
se_agents/: __init__.py  agent.py  runner.py  schemas.py  system_prompt.py  tools.py
se_agents/prompts/: additional_context.py  custom_instructions.py  description.py  final_output.py  objective.py  rules.py  think.py  tool_calling.py
