[project]
name = "se-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncer>=0.0.8",
    "duckduckgo-search>=7.5.2",
    "exa-py>=1.12.1",
    "firecrawl-py>=1.14.1",
    "openai>=1.66.3",
    "python-dotenv>=1.0.1",
]
